sample ui update - main

--- a/index.html
+++ b/index.html
@@ -71,7 +71,25 @@
       </nav>
     </div>
     <div class="container-fluid section" id="section1">
-      <h1>Section 1</h1>
+      <h1 class="d-none">Section 1</h1>
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="slogan">
+          <h2>
+            내가 소비한 제품으로 완성하는
+            <span class="d-block fs-1">나의 주식포트폴리오</span>
+          </h2>
+          <p>가계부 기반 주식정보 제공서비스, 레몬을 경험해보세요</p>
+          <button type="button" class="border-0">
+            <img src="images/icon_googleplay.png" alt="android app" />
+          </button>
+          <button type="button" class="border-0">
+            <img src="images/icon_appstore.png" alt="ios app" />
+          </button>
+        </div>
+        <div class="visual">
+          <img src="images/bg_cover.png" alt="visual cover" />
+        </div>
+      </div>
     </div>
 
     <div class="container-fluid section" id="section2">
