open graph added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="나의 주식 포트폴리오, 레몬앱" />
+    <meta
+      property="og:url"
+      content="https://seonyeonghun.github.io/lemon_app/"
+    />
+    <meta
+      property="og:image"
+      content="https://seonyeonghun.github.io/lemon_app/images/og_thumbnail.jpg"
+    />
+    <meta
+      property="og:description"
+      content="내가 소비한 제품으로 완성하는 나의 주식 포트폴리오, 레몬앱"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
